--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     		</div>
     	</div>
     </section>
-    <a href="colorgame.html">dsadasdsadasad</a>
+    <a href="colorgame/colorgame.html">dsadasdsadasad</a>
 </div>
 <script
   src="https://code.jquery.com/jquery-3.2.1.js"
