--- a/colorgame/colorgame.html
+++ b/colorgame/colorgame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Color Game</title>
+	<title>Vali õige värv!</title>
 	<link rel="stylesheet" href="colorgame.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:400,700,800" rel="stylesheet">
 </head>
