--- a/index.html
+++ b/index.html
@@ -33,21 +33,17 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-sm-4 col-xs-12">
-    				<img src="images/html5.png" alt="">
-    				<h1>HTML5</h1>
+    				<img src="images\colorgamepilt.png" class="img-thumbnail" alt="Cinque Terre" width="304" height="236">
     			</div>
     			<div class="col-sm-4 col-xs-12">
-    				<img src="images/css3.png" alt="">
-    				<h1>CSS3</h1>
+    				
     			</div>
     			<div class="col-sm-4 col-xs-12">
-					<img src="images/js.png" alt="">
-					<h1>JavaScript</h1>
+					
     			</div>
     		</div>
     	</div>
     </section>
-    <a href="colorgame\colorgame.html">dsadasdsadasad</a>
 </div>
 <script
   src="https://code.jquery.com/jquery-3.2.1.js"
