--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-sm-4 col-xs-12">
-    				<img src="images\colorgamepilt.png" class="img-thumbnail" alt="Värvi mäng!" width="420" height="413">
+    				<img src="images\colorgamepilt.png" class="img-thumbnail" alt="Värvi mäng!">
     				<a href="colorgame\colorgame.html" class="btn btn-success" role="button">Vaata!</a>
     			</div>
     			<div class="col-sm-4 col-xs-12">
