--- a/index.html
+++ b/index.html
@@ -19,30 +19,18 @@
           </button>
           <a class="navbar-brand" href="#"><i class="fa fa-desktop" aria-hidden="true"></i> Heiko Piirme</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#showcase">Avaleht</a></li>
-            <li><a href="#about">Portfoolio</a></li>
-            <li><a href="#contact">Kontakt</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
       </div>
     </nav>
-<div class="content">
-    <section id="showcase">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-sm-6 col-xs-12">
-    				<img src="images\colorgamepilt.png" class="img-thumbnail" alt="Värvi mäng!"> <br>
-    				<a href="colorgame\colorgame.html" class="btn btn-success" role="button">Vaata!</a>
-    			</div>
-    			<div class="col-sm-6 col-xs-12">
-    				
-    			</div>
-    		</div>
-    	</div>
-    </section>
+
+
+<div class="colorgameslot">
+  <img src="images\colorgamepilt.png" alt="Värvi mäng" class="colorgame">
+  <div class="overlay">
+    <div class="text"><a href="colorgame\colorgame.html"><h3>Vali õige värv (mäng)</h3></a></div>
+  </div>
 </div>
+
+
 <script
   src="https://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
