--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><i class="fa fa-desktop" aria-hidden="true"></i> Heiko Piirme</a>
+          <a class="navbar-brand" href="www.heikopiir.me/index.html"><i class="fa fa-desktop" aria-hidden="true"></i> Heiko Piirme</a>
         </div>
       </div>
     </nav>
