--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="www.heikopiir.me/index.html"><i class="fa fa-code" aria-hidden="true"></i> Heiko Piirme</a>
+          <a class="navbar-brand" href="/index.html"><i class="fa fa-code" aria-hidden="true"></i> Heiko Piirme</a>
         </div>
       </div>
     </nav>
