--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   <div class="overlay">
     <div class="text"><a href="colorgame\colorgame.html"><h3>Vali õige värv (mäng)</h3></a></div>
   </div>
+</div><div class="colorgameslot">
+  <img src="images\akordidpilt.png" alt="Värvi mäng" class="colorgame">
+  <div class="overlay">
+    <div class="text"><a href="landingPage\index.html"><h3>Akordid.ee (poolik)</h3></a></div>
+  </div>
 </div>
 
 <script
