--- a/index.html
+++ b/index.html
@@ -16,16 +16,27 @@
       </div>
     </nav>
 
-<div class="colorgameslot">
-  <img src="images\colorgamepilt.png" alt="Värvi mäng" class="colorgame">
-  <div class="overlay">
-    <div class="text"><a href="colorgame\colorgame.html"><h3>Vali õige värv (mäng)</h3></a></div>
-  </div>
-</div><div class="colorgameslot">
-  <img src="images\akordidpilt.png" alt="Värvi mäng" class="colorgame">
-  <div class="overlay">
-    <div class="text"><a href="landingPage\index.html"><h3>Akordid.ee (poolik)</h3></a></div>
-  </div>
+<div class="row">
+	<div class="itemslot col-sm-6 col-xs-12">
+    	<img src="images\colorgamepilt.png" class="img-responsive image" alt="">
+    	<div class="overlay">
+        	<p class="text"><a href="colorgame\colorgame.html">Vali õige värv (mäng)</a></p>
+    	</div>
+	</div>
+	<div class="itemslot col-sm-6 col-xs-12">
+    	<img src="images\galeriipilt.png" class="img-responsive image" alt="">
+    	<div class="overlay">
+        	<p class="text"><a href="bootstrapGalerii\index.html">Pildigalerii</a></p>
+    	</div>
+	</div>
+</div>
+<div class="row">
+	<div class="itemslot col-sm-6 col-xs-12">
+    	<img src="images\akordidpilt.png" class="img-responsive image" alt="">
+    	<div class="overlay">
+        	<p class="text"><a href="landingPage\index.html">Akordid.ee (landing page)</a></p>
+    	</div>
+	</div>
 </div>
 
 <script
