--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -35,20 +35,23 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-
-
 	<div class="container">
 		<div class="col-lg-12">
 			<div id="content">
 				<h1>Akordid.ee</h1>
 				<h3>Kõik akordid ühest kohast!</h3>
 				<hr>
-				<button id="buttonMain" class="btn btn-default btn-lg">Otsi!</button>
+        <div class="col-xs-6 col-xs-offset-3">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Otsi lugu...">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button">Otsi!</button>
+            </span>
+          </div>
+        </div>
 			</div>
 		</div>
 	</div>
-
-
 
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
