--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-default">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -21,6 +22,7 @@
       </button>
       <a class="navbar-brand" href="#"><i class="fa fa-music" aria-hidden="true"></i>
  Akordid</a>
+    </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -33,23 +35,20 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+
+
 	<div class="container">
 		<div class="col-lg-12">
 			<div id="content">
 				<h1>Akordid.ee</h1>
 				<h3>Kõik akordid ühest kohast!</h3>
 				<hr>
-        <div class="col-xs-6 col-xs-offset-3">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Otsi lugu...">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="button">Otsi!</button>
-            </span>
-          </div>
-        </div>
+				<button id="buttonMain" class="btn btn-default btn-lg">Otsi!</button>
 			</div>
 		</div>
 	</div>
+
+
 
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
