--- a/bootstrapGalerii/index.html
+++ b/bootstrapGalerii/index.html
@@ -25,8 +25,8 @@
 					<li><a href="#">Kontakt</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Registreeru</a></li>
-					<li><a href="#">Logi sisse</a></li>
+					<li><a href="#"><i class="fa fa-user" aria-hidden="true"></i> Registreeru</a></li>
+					<li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i> Logi sisse</a></li>
 				</ul>
 			</div>
 		</div>
