--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <li><a href="#main">Avaleht</a></li>
             <li><a href="#minust">Minust</a></li>
             <li><a href="#tehtud">Projektid</a></li>
-            <li><a href="#kontakt">Kontakt</a></li>
           </ul>
         </div>
       </div>
@@ -75,14 +74,11 @@
     </div>
     </div>
 </section>
-<section id="kontakt">
-    <header>
-        <h1>Heiko Piirme</h1>
-        <h3>Tere tulemast minu kodulehele!3</h3>
-        <hr>
-    </header>
-</section>
-
+<footer class="footer">
+    <div class="container">
+      <p class="text-muted"><i class="fa fa-copyright" aria-hidden="true"></i> Heiko Piirme 2017        <i class="fa fa-user" aria-hidden="true"></i> www.heikopiir.me        <i class="fa fa-envelope-o" aria-hidden="true"></i> heiko.piirme@gmail.com</p>
+    </div>
+</footer>
 	<script
   		src="https://code.jquery.com/jquery-3.2.1.js"
   		integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
