--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <section id="minust">
     <div class="container">
       <h1>Minust</h1>
-      <p>Olen 19 aastane noormees Pärnumaalt, kes on väga huvitatud veebiarendusest. Olen alati huvitunud veebilehtede valmistamisest, kui alles viimased paar kuud olen sellele rohkem tähelepanu pööranud. Hetkel õpin küll ainult Front-End arendust, kui tulevikus tahaks ka Back-Endiga tegeleda.</p>
+      <p>Olen 19 aastane noormees Pärnumaalt, kes on väga huvitatud veebiarendusest. Olen alati huvitunud veebilehtede valmistamisest, kui alles viimased paar kuud olen sellele rohkem tähelepanu pööranud. Hetkel õpin küll ainult Front-End arendust, kuid tulevikus tahaks ka Back-Endiga tegeleda.</p>
       <div class="row">
         <div class="col-sm-2 col-sm-offset-3 text-center"><i class="fa fa-html5 fa-5x" aria-hidden="true"></i><br><h1>HTML</h1></div>
         <div class="col-sm-2 text-center"><i class="fa fa-css3 fa-5x" aria-hidden="true"></i><br><h1>CSS</h1></div>
