--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
                 <p class="text"><a href="landingPage\index.html">Akordid.ee (landing page)</a></p>
               </div>
           </div>
+	  <div class="itemslot col-md-4 no-gutters">
+              <img src="images\akordidpilt.png" class="img-responsive image" alt="">
+              <div class="overlay">
+                <p class="text"><a href="landingPage\index.html">Akordid.ee (landing page)</a></p>
+              </div>
+          </div>
     </div>
     </div>
 </section>
