--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	  <div class="itemslot col-md-4 no-gutters">
               <img src="images\akordidpilt.png" class="img-responsive image" alt="">
               <div class="overlay">
-                <p class="text"><a href="landingPage\index.html">Akordid.ee (landing page)</a></p>
+                <p class="text"><a href="landingPage\index.html">Poenimekiri (äpp)</a></p>
               </div>
           </div>
     </div>
