--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
               </div>
           </div>
 	  <div class="itemslot col-md-4 no-gutters">
-              <img src="images\akordidpilt.png" class="img-responsive image" alt="">
+              <img src="images\poenimekiri.png" class="img-responsive image" alt="">
               <div class="overlay">
-                <p class="text"><a href="landingPage\index.html">Poenimekiri (äpp)</a></p>
+                <p class="text"><a href="poenimekiri\index.html">Poenimekiri (äpp)</a></p>
               </div>
           </div>
     </div>
