--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -34,19 +34,13 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-
-
-	<div class="container">
-		<div class="col-lg-12">
-			<div id="content">
-				<h1>Akordid.ee</h1>
-				<h3>Kõik akordid ühest kohast!</h3>
-				<hr>
-				<button id="buttonMain" class="btn btn-default btn-lg">Otsi!</button>
-			</div>
-		</div>
-	</div>
+<section id="main">
+    <header>
+        <h1>Heiko Piirme</h1>
+        <h3>Tere tulemast minu kodulehele!</h3>
+        <hr>
+    </header>
+</section>
 
 
 
