--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-	<script src="https://use.fontawesome.com/dbeaed94fb.js"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </head>
@@ -25,27 +25,28 @@
 		<div class="row">
 			<div class="oskus col-md-3">
 			<div class="siniVahe"></div>
-				<i class="fa fa-html5 fa-5x"></i>
-				<i class="fa fa-css3 fa-5x"></i>
+				<i class="fab fa-html5 fa-5x"></i>
+				<i class="fab fa-css3-alt fa-5x"></i>
 				<hr>
-				<h2>HTML & CSS</h2>
-				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star-o fa-2x"></i></span>
+				<h2>HTML5 & CSS3</h2>
+				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="far fa-star fa-2x"></i></span>
 			</div>
 			<div class="oskus col-md-3">
 			<div class="siniVahe"></div>
-				<i class="fa fa-code fa-5x"></i>
+				<i class="fab fa-js-square fa-5x"></i>
 				<hr>
 				<h2>JavaScript</h2>
-				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star-o fa-2x"></i><i class="fa fa-star-o fa-2x"></i></span>
+				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i></span>
 			</div>
 			<div class="oskus col-md-3">
 			<div class="siniVahe"></div>
-				<i class="fa fa-file-code-o fa-5x"></i>
+				<i class="fab fa-python fa-5x"></i>
 				<hr>
 				<h2>Python</h2>
-				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star-o fa-2x"></i><i class="fa fa-star-o fa-2x"></i><i class="fa fa-star-o fa-2x"></i></span>
+				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i></span>
 			</div>
 		</div>
+		
 		<div class="portfoolio container">
 			<div class="row">
 				<div class="col-md-8 leht"><h1>Näidis</h1></div>
