--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="parallax">
-		<img src="img/logo.png" id="logo">
+				<img src="img/logo.png" id="logo">
 	</div>
 	<div class="siniVahe"></div>
 	<div class="sisu">
@@ -46,7 +46,7 @@
 				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i></span>
 			</div>
 		</div>
-		
+
 		<div class="portfoolio container">
 			<div class="row">
 				<div class="col-md-8 leht"><h1>Näidis</h1></div>
@@ -59,8 +59,30 @@
 				<div class="col-md-3 leht"><h1>Näidis</h1></div>
 			</div>
 		</div>
+
+			</div>
 	</div>
-	</div>
+
+
+
+		<div class="jalus">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 copy">
+						<p><i class="fas fa-phone"></i> 58547363</p>
+						<div class="siniVahe"></div>
+					</div>
+					<div class="col-md-4 copy">
+						<p>&copy; www.heikopiir.me 2017</p>
+						<div class="siniVahe"></div>
+					</div>
+					<div class="col-md-4 copy">
+						<p><i class="far fa-envelope"></i> heiko.piirme@khk.ee</p>
+						<div class="siniVahe"></div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 
