--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
 				<i class="fab fa-html5 fa-5x"></i>
 				<i class="fab fa-css3-alt fa-5x"></i>
 				<hr>
-				<h2>HTML5 & CSS3</h2>
-				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="far fa-star fa-2x"></i></span>
+				<h2>HTML<span class="and">&</span>CSS</h2>
+				<span class="tahed"><i class="fa fa-star fa-lg"></i><i class="fa fa-star fa-lg"></i><i class="fa fa-star fa-lg"></i><i class="fa fa-star fa-lg"></i><i class="far fa-star fa-lg"></i></span>
 			</div>
 			<div class="oskus col-md-3">
 			<div class="siniVahe"></div>
 				<i class="fab fa-js-square fa-5x"></i>
 				<hr>
 				<h2>JavaScript</h2>
-				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i></span>
+				<span class="tahed"><i class="fa fa-star fa-lg"></i><i class="fa fa-star fa-lg"></i><i class="fa fa-star fa-lg"></i><i class="far fa-star fa-lg"></i><i class="far fa-star fa-lg"></i></span>
 			</div>
 			<div class="oskus col-md-3">
 			<div class="siniVahe"></div>
 				<i class="fab fa-python fa-5x"></i>
 				<hr>
 				<h2>Python</h2>
-				<span class="tahed"><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i></span>
+				<span class="tahed"><i class="fa fa-star fa-lg"></i><i class="fa fa-star fa-lg"></i><i class="far fa-star fa-lg"></i><i class="far fa-star fa-lg"></i><i class="far fa-star fa-lg"></i></span>
 			</div>
 		</div>
 
