--- a/index.html
+++ b/index.html
@@ -68,16 +68,20 @@
 		<div class="jalus">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-4 copy">
+					<div class="col-md-3 copy">
+						<p><i class="far fa-address-card"></i> Heiko Piirme</p>
+						<div class="siniVahe"></div>
+					</div>
+					<div class="col-md-3 copy">
+						<p><i class="far fa-envelope"></i> heiko.piirme@khk.ee</p>
+						<div class="siniVahe"></div>
+					</div>
+					<div class="col-md-3 copy">
 						<p><i class="fas fa-phone"></i> 58547363</p>
 						<div class="siniVahe"></div>
 					</div>
-					<div class="col-md-4 copy">
-						<p>&copy; www.heikopiir.me 2017</p>
-						<div class="siniVahe"></div>
-					</div>
-					<div class="col-md-4 copy">
-						<p><i class="far fa-envelope"></i> heiko.piirme@khk.ee</p>
+					<div class="col-md-3 copy">
+						<p><i class="fas fa-home"></i> www.heikopiir.me</p>
 						<div class="siniVahe"></div>
 					</div>
 				</div>
